--- a/pom.xml
+++ b/pom.xml
@@ -177,8 +177,8 @@
 
   <profiles>
     <profile>
-           <id>mades<id>
-                  <profile>
+           <id>mades</id>
+                  </profile>
     <profile>
       <id>tomcat90</id>
       <properties>
