--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
 
   <profiles>
     <profile>
-           <id>mades</id>
+           <id>mysonar</id>
            <activation>
                   <activeByDefault>true</activeByDefault></activation>
              <properties><sonar.host.url>http://localhost:9000</sonar.host.url> 
