--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
       <name>Mybatis GitHub Pages</name>
       <url>git:ssh://git@github.com/mybatis/jpetstore-6.git?gh-pages#</url>
     </site>
+         <snapshotRepository>
+                <id>admin</id>
+                <name>Internal Release</name>
+                <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+                </snapshotRepository>
   </distributionManagement>
 
   <dependencies>
