--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
       <url>git:ssh://git@github.com/mybatis/jpetstore-6.git?gh-pages#</url>
     </site>
          <snapshotRepository>
-                <id>admin</id>
-                <name>Internal Release</name>
-                <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+                <id>Nexus</id>
+                <name>Internal Releases </name>
+                <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
                 </snapshotRepository>
   </distributionManagement>
 
