--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,12 @@
     <url>https://travis-ci.org/mybatis/jpetstore-6</url>
   </ciManagement>
   <distributionManagement>
-            <snapshotRepository>
-                <id>Nexus</id>
-                <name>Internal Releases</name>
-                <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
-                </snapshotRepository>
+ <snapshotRepository>
+ <id>nexus</id>
+ <name>Internal Releases</name>
+  <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+  </snapshotRepository>
   </distributionManagement>
-
   <dependencies>
     <dependency>
       <groupId>commons-logging</groupId>
